[project]
name = "autoencoder-vae-mnist"
version = "0.1.0"
description = "Autoencoder and Variational Autoencoder for FashionMNIST"
authors = [
    { name = "Twoje Imię", email = "twoj.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "scikit-learn>=1.4.0",
    "tqdm>=4.66.0",
    "jupyter>=1.0.0"
]

[tool.jupyter]
notebook_dir = "src"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

